Fixed text alignment issue

--- a/src/components/molecules/HeadingSection/HeadingSection.module.scss
+++ b/src/components/molecules/HeadingSection/HeadingSection.module.scss
@@ -75,6 +75,10 @@
     }
 }
 
+.a-link {
+    text-decoration: none;
+}
+
 .cv-btn {
     color: #ffffff !important;
 
