--- a/src/components/organisms/Contact/Contact.module.scss
+++ b/src/components/organisms/Contact/Contact.module.scss
@@ -7,14 +7,12 @@
     font-size: 6.25rem;
     font-weight: 400;
     line-height: 1;
-    white-space: pre;
     text-align: left;
     max-width: 40rem;
     margin: 0px;
 
     @include media(mobile) {
         font-size: 4.25rem;
-        white-space: wrap;
     }
 
     @include media(tablet) {
